# edvl_hospitales

./: .gitignore  README.md  docker-compose.yaml
db-operations/: README.md  alembic.ini  pyproject.toml
db-operations/src/: db_connection.py  main.py  nosql_connection.py
db-operations/src/fields/: current_field_labels-v1.py  old_field_labels.py
db-operations/src/migrations/: env.py
db-operations/src/migrations/versions/: 0d1c00fe05fa_change_keys.py  1830ae47d947_create_resultados_peticiones_again.py  2819835cc451_create_codificacion.py  3a9e3ce161f4_change_keys.py  3f1fd9c84ada_change_keys.py  419747f673f4_create_proceso.py  5b69497185da_create_paciente.py  65c5db089326_create_formularios.py  6a75aae123d4_create_traslados.py  6af438c6b608_change_keys.py  712f0d8b5b23_change_keys.py  7a9397970494_change_keys.py  7d84d2d3f657_change_keys.py  80eafae0e149_create_notas.py  868203f961f5_change_keys.py  8fa9893fb4b5_create_informes.py  9baa4d1289c6_create_resultados_peticiones.py  aee6276e9d35_create_resultados_peticiones_again.py  b0b459717b83_create_resultados_peticiones.py  b0db701908c7_change_keys.py  b19bcd020c58_create_traslados.py  (+3 more)
db-operations/src/models/: __init__.py  acto_clinico.py  codificacion.py  formularios.py  informes.py  notas.py  paciente.py  proceso.py  resultados_peticiones.py  traslados.py
db-operations/src/nosql_models/: schema.json
db-operations/src/sql_models/: __init__.py  acto_clinico.py  base.py  codificacion.py  formularios.py  informes.py  notas.py  paciente.py  proceso.py  resultados_peticiones.py  traslados.py  types.py
(+46 files in other folders)
